# deepseek-ocr-v2

./: .gitattributes  .gitignore  README.md  cleanup.py  main.py  make_sample.py  mkdocs.yml  ocr_pdf.py  preprocess.py  pyproject.toml  repetition.py
.github/workflows/: ci.yml  docs.yml
docs/: index.md  internals.md  usage.md
tests/: test_cleanup.py
